--- a/web-templates-ui/index.html
+++ b/web-templates-ui/index.html
@@ -5,58 +5,71 @@
   <title>WebTemplates!</title>
 
   <link rel="stylesheet" href="/webjars/bootstrap/3.3.6/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/webjars/jsoneditor/5.0.1/dist/jsoneditor.min.css" />
   <link rel="stylesheet" href="/css/styles.css" />
 
   <script type="text/javascript" src="/webjars/jquery/2.2.2/jquery.min.js"></script>
   <script type="text/javascript" src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="/webjars/ckeditor/4.5.7/standard/ckeditor.js"></script>
-  <script type="text/javascript" src="/webjars/angularjs/1.5.3/angular.min.js"></script>
-  <script type="text/javascript" src="/webjars/angular-ckeditor/1.0.3/angular-ckeditor.min.js"></script>
-  <script type="text/javascript" src="/webjars/angular-ui-router/0.2.18/angular-ui-router.min.js "></script>
-
-
+  <script type="text/javascript" src="/webjars/jsoneditor/5.0.1/dist/jsoneditor.min.js"></script>
 
   <script type="text/javascript" src="/js/main.js"></script>
-  <script type="text/javascript" src="/js/controllers/NewTemplateController.js"></script>
-  <script type="text/javascript" src="/js/controllers/ListTemplatesController.js"></script>
-
-
 </head>
-<body data-ng-app="web-templates-ui">
-
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button"
-          class="navbar-toggle collapsed"
-          data-toggle="collapse"
-          data-target="#navbar"
-          aria-expanded="false"
-          aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Web Templates</a>
-    </div>
-    <div id="navbar" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li ui-sref-active="active" >
-          <a ui-sref="newTemplateState">Nueva plantilla</a>
-        </li>
-        <li ui-sref-active="active" >
-          <a ui-sref="listTemplatesState">Listar plantillas</a>
-        </li>
-      </ul>
+<body>
+<div class="container">
+  <div class="col-md-12">
+    <div class="starter-template">
+      <h1>Web Templates</h1>
     </div>
   </div>
-</nav>
 
-<div ui-view class="container">
+  <div class="row">
+    <div class="col-md-8">
+      <h4>
+        Escribe tu plantilla aqu&iacute;
+      </h4>
+    </div>
+    <div class="col-md-4">
+      <h4>
+        Define los valores a reemplazar aqu&iacute;
+      </h4>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-8">
+      <div id="ckeditor">
+        <h1>Hello ${name}!</h1>
+
+        <p>
+          We Wanted to reach you out, about ${dog.name}, we know you love your
+          ${dog.age} years old ${dog.breed}
+        </p>
+
+        <h4>Here are some services that might interest you of him!</h4>
+
+
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div id="jsoneditor" style="height: 500px">
+      </div>
+    </div>
+  </div>
+
+  <div class="row" style="padding-top: 2em">
+    <div class="col-md-offset-5 col-md-2">
+      <button type="button" id="evaluate" class="btn btn-info">Evaluar</button>
+    </div>
+  </div>
+
+  <hr />
+
+  <div class="row">
+    <div class="col-md-12">
+      <div id="output"></div>
+    </div>
+  </div>
 </div>
-
-
-
 </body>
 </html>
