funcionando como servlet y con jetty

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,16 +4,16 @@
   <meta charset="utf-8">
   <title>WebTemplates!</title>
 
-  <link rel="stylesheet" href="/webjars/bootstrap/3.3.6/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/webjars/jsoneditor/5.0.1/dist/jsoneditor.min.css" />
-  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="webjars/bootstrap/3.3.6/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="webjars/jsoneditor/5.0.1/dist/jsoneditor.min.css" />
+  <link rel="stylesheet" href="css/styles.css" />
 
-  <script type="text/javascript" src="/webjars/jquery/2.2.2/jquery.min.js"></script>
-  <script type="text/javascript" src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="/webjars/ckeditor/4.5.7/standard/ckeditor.js"></script>
-  <script type="text/javascript" src="/webjars/jsoneditor/5.0.1/dist/jsoneditor.min.js"></script>
+  <script type="text/javascript" src="webjars/jquery/2.2.2/jquery.min.js"></script>
+  <script type="text/javascript" src="webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="webjars/ckeditor/4.5.7/standard/ckeditor.js"></script>
+  <script type="text/javascript" src="webjars/jsoneditor/5.0.1/dist/jsoneditor.min.js"></script>
 
-  <script type="text/javascript" src="/js/main.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
 <div class="container">
